<resources>
    <string name="app_name">RoomMate</string>
    <string name="ads_title">Vagas Disponíveis</string>
    <string name="create_ad">Criar anúncio</string>
    <string name="ad_img_description">Imagem do imóvel</string>
    <string name="ad_title">Apartamento na rua debaixo</string>
    <string name="ad_price">R$ 2200,00/ mês</string>
    <string name="ad_local">Mata da Praia/ Vitória</string>
    <string name="heart_img_description">Coração de favorito</string>
    <string name="my_groups">Meus Grupos</string>
    <string name="my_group_description">República Nova para Apartamento da Rua de Baixo</string>
    <string name="group_qtt_members">6 membros</string>
    <string name="group_qtt_notification">1</string>
    <string name="camera_icon_description">Ícone câmera</string>
    <string name="name">Nome</string>
    <string name="username">Daniel Siqueira de Oliveira</string>
    <string name="user_icon_description">Ícone usuário</string>
    <string name="phone_icon">Ícone telefone</string>
    <string name="phone_profile">Telefone</string>
    <string name="user_phone_profile">(27) 99999–9999</string>
    <string name="bio_icon">Ícone de informação</string>
    <string name="user_bio_profile">Sou estudante do curso de Ciência da Computação da U…\t</string>
    <string name="bio_profile">Bio</string>
    <string name="favorite_ads">Anúncios Favoritos</string>
    <string name="my_ads">Meus Anúncios</string>
    <string name="ads_icon_description">Ícone de casas</string>
    <string name="favorite_ads_title">Anúncios Favoritos</string>
    <string name="my_ads_title">Meus Anúncios</string>
    <string name="logo_img_description">Logo com uma casa de dois andares com chaminé e duas árvores</string>
    <string name="name_app">RoomMates</string>
    <string name="app_description">Formação de repúblicas universitárias.</string>
    <string name="created_by">Criado por lelê e dani</string>
    <string name="e_mail">E-mail</string>
    <string name="email_hint">Insira seu e-mail</string>
    <string name="sign_in_btn">Entrar</string>
    <string name="password">Senha</string>
    <string name="password_hint">Insira sua senha</string>
    <string name="name_hint">Insira seu nome</string>
    <string name="phone_hint">Insira seu telefone</string>
    <string name="phone">Telefone</string>
    <string name="sex">Sexo</string>
    <string name="birth_date">Data de Nascimento</string>
    <string name="e_mail_confirm">Confirme seu e-mail</string>
    <string name="password_confirm">Confirme sua senha</string>
    <string name="proceed">Prosseguir</string>
    <string name="birth_date_hint">Selecione a data de nascimento</string>
    <string name="finish_signup">Finalizar Cadastro</string>
    <string name="pin_icon_description">Ícone de Pin</string>
    <string name="description">Descrição</string>
    <string name="ad_description">Apartamento com chão de madeira, parede branca e mesa de madeira</string>
    <string name="address">Endereço</string>
    <string name="ad_address">Rua Don Corleone, n° 3324, Mata da Praia, Vitória</string>
    <string name="g_maps_icon_description">Ícone Google Maps</string>
    <string name="what_we_have">O que temos a oferecer</string>
    <string name="r_2_200_00">R$ 2.200,00</string>
    <string name="groups">Grupos</string>
    <string name="number_test">2</string>
    <string name="suites">Suítes</string>
    <string name="square_meters">Metros²</string>
    <string name="vacancies">Vagas</string>
    <string name="parking">Garagem</string>
    <string name="description_hint">Insira uma descrição</string>
    <string name="is_it_private_group">É um grupo privado?</string>
    <string name="create_group">Criar grupo</string>
    <string name="group_name_hint">Insira o nome do grupo</string>
    <string name="group_name">Nome do Grupo</string>
    <string name="selecionar_btn">Selecionar</string>
    <string name="grupos_interesados_screen">Grupos interesados</string>
    <string name="plus">+</string>
    <string name="grupo_organizado">Grupo organizado</string>
    <string name="thumbs_up">thumbs up</string>
    <string name="thumbs_down">thumbs down</string>
    <string name="thumbs_down_description">Ícone de rejeição</string>
    <string name="thumbs_up_description">Ícon de aceitação.</string>
    <string name="label_title">Título</string>
    <string name="title_hint">Insira o título do anúncio</string>
    <string name="rental_value">Valor de aluguel</string>
    <string name="rental_value_hint">Insira o valor do aluguel</string>
    <string name="condo_value">Valor do condomínio</string>
    <string name="condo_value_hint">Insira o valor do condomínio</string>
    <string name="cep">CEP</string>
    <string name="cep_hint">Insira o CEP</string>
    <string name="number">Número</string>
    <string name="number_hint">Insira o número</string>
    <string name="street">Rua</string>
    <string name="street_hint">Insira a rua</string>
    <string name="neighborhood">Bairro</string>
    <string name="neighborhood_hint">Insira o bairro</string>
    <string name="city">Cidade</string>
    <string name="city_hint">Insira a cidade</string>
    <string name="state">Estado</string>
    <string name="state_hint">Insira o estado</string>
    <string name="maximum_of_clients">Número de clientes</string>
    <string name="maximum_of_clients_hint">Insira o número de clientes</string>
    <string name="upload_photos">Adicione fotos</string>
    <string name="upload_icon_description">Icone usado para simbolizar envio de arquivos</string>
    <string name="rooms_number">Quantidade de quartos</string>
    <string name="rooms_number_hint">Insira o número de quartos</string>
    <string name="area">Área (M²)</string>
    <string name="area_hint">Insira a área em m²</string>
    <string name="suites_number">Quantidade de suítes</string>
    <string name="suites_number_hint">Insira a quantidade de suítes</string>
    <string name="benefits">Benefícios</string>
    <string name="finish_ad_create">Finalizar Cadastro</string>
    <string name="security_benefits">Segurança 24/7</string>
    <string name="pet_friendly_benefits">Política Pet-friendly</string>
    <string name="pool_benefit">Piscina</string>
    <string name="air_conditioning_benefits">Ar condicionado</string>
    <string name="hot_water_benefit">Água aquecida</string>
    <string name="high_network_speed_benefit">Internet de alta velocidade</string>
    <string name="parking_spot_benefit">Vaga de garagem</string>
    <string name="girls_only_benefit">Apenas moças</string>
    <string name="forget_pass">Esqueceu a senha?</string>
    <string name="sign_up">Cadastre-se</string>
    <string name="member_qtt">3 membros</string>
    <string name="group_description">Grupo de pessoas do curso de ciência da computação</string>
    <string name="members">Membros</string>
    <string name="search">Buscar</string>
    <string name="profile">Perfil</string>
    <string name="feed">Feed</string>
    <string name="show_members_qtt">Members: %1$s</string>
    <string name="bio_default">Olá! Estou usando o RoomMate!</string>
    <string name="grupo_privado">Grupo privado?</string>
    <string name="bedrooms">Quartos</string>
    <string name="parking_hint">Insira a quantidade de vagas</string>
    <string name="qtt">Quantidade:</string>
    <string name="get_in">Entrar</string>
    <string-array name="sex_array">
        <item>Feminino</item>
        <item>Maculino</item>
        <item>Outro</item>
        <item>Prefiro não informar</item>
    </string-array>
</resources>
