<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient1">

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="650dp"
        android:background="@drawable/dialog_shape"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rooms_number"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="7dp"
            android:autofillHints="E-mail"
            android:background="@drawable/text_box_shape"
            android:hint="@string/rooms_number_hint"
            android:inputType="text"
            android:padding="7dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/area"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="7dp"
            android:autofillHints="Area"
            android:background="@drawable/text_box_shape"
            android:hint="@string/area_hint"
            android:inputType="textMultiLine|textPassword"
            android:padding="7dp"
            android:scrollbars="vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/suites_number"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="7dp"
            android:autofillHints="E-mail"
            android:background="@drawable/text_box_shape"
            android:hint="@string/suites_number_hint"
            android:inputType="textEmailAddress"
            android:padding="7dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/benefits"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/girls_only_benefit"
                    android:textColor="@color/black"
                    android:buttonTint="@color/black"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parking_spot_benefit"
                    android:textColor="@color/black"
                    android:buttonTint="@color/black"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high_network_speed_benefit"
                    android:textColor="@color/black"
                    android:buttonTint="@color/black"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_water_benefit"
                    android:textColor="@color/black"
                    android:buttonTint="@color/black"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/air_conditioning_benefits"
                    android:textColor="@color/black"
                    android:buttonTint="@color/black"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pool_benefit"
                    android:textColor="@color/black"
                    android:buttonTint="@color/black"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_friendly_benefits"
                    android:textColor="@color/black"
                    android:buttonTint="@color/black"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/security_benefits"
                    android:textColor="@color/black"
                    android:buttonTint="@color/black"/>
            </LinearLayout>
        </ScrollView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/ad3_finish_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/blue4"
            android:text="@string/finish_ad_create"
            android:textSize="20sp" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>

