<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient1">


    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_shape"
        android:elevation="7dp"
        android:orientation="vertical"
        android:padding="15dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cep"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="7dp"
            android:autofillHints="E-mail"
            android:background="@drawable/text_box_shape"
            android:hint="@string/cep_hint"
            android:inputType="text"
            android:padding="7dp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/number"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/text_box_shape"
            android:hint="@string/number_hint"
            android:inputType="textMultiLine|textPassword"
            android:padding="7dp"
            android:scrollbars="vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/street"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="7dp"
            android:autofillHints="E-mail"
            android:background="@drawable/text_box_shape"
            android:hint="@string/street_hint"
            android:inputType="textEmailAddress"
            android:padding="7dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/neighborhood"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="7dp"
            android:autofillHints="Password"
            android:background="@drawable/text_box_shape"
            android:hint="@string/neighborhood_hint"
            android:inputType="textPassword"
            android:padding="7dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/city"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="7dp"
            android:autofillHints="Password"
            android:background="@drawable/text_box_shape"
            android:hint="@string/city_hint"
            android:inputType="textPassword"
            android:padding="7dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/state"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="7dp"
            android:autofillHints="Password"
            android:background="@drawable/text_box_shape"
            android:hint="@string/state_hint"
            android:inputType="textMultiLine|textPassword"
            android:padding="7dp"
            android:scrollbars="vertical"/>








        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/blue4"
            android:text="@string/proceed"
            android:textSize="20sp"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>