<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape"
    android:elevation="7dp"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:autofillHints="Nome"
        android:background="@drawable/text_box_shape"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:padding="7dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:autofillHints="Telefone"
        android:background="@drawable/text_box_shape"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:padding="7dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sex"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerDays"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:entries="@array/sex_array"
        android:background="@drawable/text_box_shape"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/birth_date"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:autofillHints="Data de nascimento"
        android:background="@drawable/text_box_shape"
        android:hint="@string/birth_date_hint"
        android:inputType="phone"
        android:padding="7dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/blue4"
        android:textColor="@color/white"
        android:text="@string/proceed"
        android:textSize="18sp" />
</LinearLayout>
