<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape"
    android:elevation="7dp"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:autofillHints="E-mail"
        android:background="@drawable/text_box_shape"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="7dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/e_mail_confirm"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:autofillHints="E-mail"
        android:background="@drawable/text_box_shape"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="7dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:autofillHints="Password"
        android:background="@drawable/text_box_shape"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="7dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password_confirm"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:autofillHints="Password"
        android:background="@drawable/text_box_shape"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="7dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/blue4"
        android:text="@string/proceed"
        android:textSize="18sp" />
</LinearLayout>
